syntax = 'proto3';

package RMSync;

service RMSyncBroker {

  rpc ReferenceModelSync (ReferenceModelInfo) returns (AckMessage);

}

message ReferenceModelInfo {
  string commit_number = 1;
  bytes file = 2;
}

message AckMessage {
  string result = 1;
}
